# teetee

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  eigen_utils.hpp  eigensvd.cpp  generate_svd_references.cpp  main.cpp  run_eigen.cpp  run_xtensor.cpp  tteigen.hpp  ttxtensor.hpp  utils.hpp  xt_utils.hpp  xtsvd.cpp
tests/: CMakeLists.txt  test_tteigen.cpp  test_utils.hpp  unit_tests.cpp
